--- a/groups/Coach.html
+++ b/groups/Coach.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Coach Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f0f2f5;
+      padding: 2rem;
+    }
+    .card {
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      max-width: 500px;
+      margin: auto;
+      text-align: center;
+    }
+    .card h1 {
+      color: #2c3e50;
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>Welcome, Coach!</h1>
+    <p>You have full access to manage users, view analytics, and modify settings.</p>
+  </div>
+</body>
+</html>
 
