--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     auth: {
       clientId: "c4d18c3f-5c5d-4a64-811f-809f0bb50667",
       authority: "https://login.microsoftonline.com/common",
-      redirectUri: "https://ambitious-water-0dda8d803.6.azurestaticapps.net"
+      redirectUri: "https://ambitious-water-0dda8d803.6.azurestaticapps.net/admin"
     }
   };
 
