--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   const msalConfig = {
     auth: {
       clientId: "c4d18c3f-5c5d-4a64-811f-809f0bb50667",
-      authority: "https://login.microsoftonline.com/common",
+      authority: "https://login.microsoftonline.com/ae49937b-e6e5-4c58-a720-c3d7ebd7f665",
       redirectUri: "https://ambitious-water-0dda8d803.6.azurestaticapps.net/admin"
     }
   };
