--- a/index.html
+++ b/index.html
@@ -1,46 +1,89 @@
-<script src="https://alcdn.msauth.net/browser/2.35.0/js/msal-browser.min.js"></script>
-<script>
-  const msalConfig = {
-    auth: {
-      clientId: "c4d18c3f-5c5d-4a64-811f-809f0bb50667",
-      authority: "https://login.microsoftonline.com/ae49937b-e6e5-4c58-a720-c3d7ebd7f665",
-      redirectUri: "https://ambitious-water-0dda8d803.6.azurestaticapps.net"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f0f2f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-  };
+    .login-card {
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+    button {
+      background-color: #0078d4;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #005a9e;
+    }
+  </style>
+</head>
+<body>
+  <div class="login-card">
+    <h1>Welcome</h1>
+    <p>Please log in to continue.</p>
+    <button onclick="signIn()">Login with Microsoft</button>
+  </div>
 
-  const msalInstance = new msal.PublicClientApplication(msalConfig);
-
-  async function signIn() {
-    try {
-      const response = await msalInstance.loginPopup({
-        scopes: ["openid", "profile", "email"],
-        prompt: "select_account" // 👈 forces user to choose account
-      });
-
-      const idToken = response.idToken;
-
-      // Decode the JWT token payload
-      const payload = JSON.parse(atob(idToken.split('.')[1]));
-      const groupIds = payload.groups || [];
-
-      // Map of group IDs to group names
-      const groupMap = {
-        "0c3a5074-675c-4441-b665-3709f2e389e3": "admin",
-        "92eee0d9-de17-4056-8720-478601a22de1": "coach",
-        "a0b86c5d-544e-4a0d-a10c-b16eac07cf00": "nbl",
-        "bb89a797-92d2-4f1c-be21-8ba5200b427c": "players"
-      };
-
-      const matchedGroupId = groupIds.find(id => groupMap[id]);
-      const groupName = groupMap[matchedGroupId];
-
-      if (groupName) {
-        window.location.href = `/groups/${groupName}.html`;
-      } else {
-        document.body.innerHTML = "<h2>Access Denied: You are not in an authorized group.</h2>";
+  <script src="https://alcdn.msauth.net/browser/2.35.0/js/msal-browser.min.js"></script>
+  <script>
+    const msalConfig = {
+      auth: {
+        clientId: "c4d18c3f-5c5d-4a64-811f-809f0bb50667",
+        authority: "https://login.microsoftonline.com/ae49937b-e6e5-4c58-a720-c3d7ebd7f665",
+        redirectUri: "https://ambitious-water-0dda8d803.6.azurestaticapps.net"
       }
-    } catch (err) {
-      console.error("Login failed:", err);
-      alert("Login failed. Check the console for more information.");
-    }
+    };
 
+    const msalInstance = new msal.PublicClientApplication(msalConfig);
+
+    async function signIn() {
+      try {
+        const response = await msalInstance.loginPopup({
+          scopes: ["openid", "profile", "email"],
+          prompt: "select_account"
+        });
+
+        const idToken = response.idToken;
+        const payload = JSON.parse(atob(idToken.split('.')[1]));
+        const groupIds = payload.groups || [];
+
+        const groupMap = {
+          "0c3a5074-675c-4441-b665-3709f2e389e3": "admin",
+          "92eee0d9-de17-4056-8720-478601a22de1": "coach",
+          "a0b86c5d-544e-4a0d-a10c-b16eac07cf00": "nbl",
+          "bb89a797-92d2-4f1c-be21-8ba5200b427c": "players"
+        };
+
+        const matchedGroupId = groupIds.find(id => groupMap[id]);
+        const groupName = groupMap[matchedGroupId];
+
+        if (groupName) {
+          window.location.href = `/groups/${groupName}.html`;
+        } else {
+          document.body.innerHTML = "<h2>Access Denied: You are not in an authorized group.</h2>";
+        }
+      } catch (err) {
+        console.error("Login failed:", err);
+        alert("Login failed. Check the console for more information.");
+      }
+    }
+  </script>
+</body>
+</html>
