--- a/groups/players.html
+++ b/groups/players.html
@@ -1,63 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Players Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f0f2f5;
-      padding: 2rem;
-    }
-    .card {
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      max-width: 500px;
-      margin: auto;
-      text-align: center;
-    }
-    .card h1 {
-      color: #2c3e50;
-    }
-    .signout-button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #e74c3c;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .signout-button:hover {
-      background-color: #c0392b;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Next Play Stats Reports</title>
+  <link rel="stylesheet" href="styles.css">
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <div class="card">
-    <h1>Welcome, Player!</h1>
-    <p>You have barely any access view analytics.</p>
-    <button class="signout-button" onclick="signOut()">Sign Out</button>
-  </div>
+  <header>
+    <div class="logo">LOGO</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Reports</a>
+      <a href="#">Help</a>
+      <div class="username">USERNAME</div>
+    </nav>
+  </header>
 
-  <script src="https://alcdn.msauth.net/browser/2.35.0/js/msal-browser.min.js"></script>
-  <script>
-    const msalConfig = {
-      auth: {
-        clientId: "c4d18c3f-5c5d-4a64-811f-809f0bb50667",
-        authority: "https://login.microsoftonline.com/ae49937b-e6e5-4c58-a720-c3d7ebd7f665",
-        redirectUri: "https://ambitious-water-0dda8d803.6.azurestaticapps.net"
-      }
-    };
+  <main>
+    <div class="category-buttons">
+      <button onclick="showCategory('Players')">Players</button>
+      <button onclick="showCategory('Teams')">Teams</button>
+      <!-- Add more categories as needed -->
+    </div>
 
-    const msalInstance = new msal.PublicClientApplication(msalConfig);
+    <div class="report-icons Players">
+      <a href="#"><img src="icons/ssri.png" alt=""><span>Hi I'm a report</span></a>
+      <a href="#"><img src="icons/quarterly.png" alt=""><span>Hi I'm a report</span></a>
+      <a href="#"><img src="icons/daily.png" alt=""><span>Hi I'm a report</span></a>
+      <!-- Add other protection icons -->
+    </div>
 
-    function signOut() {
-      msalInstance.logoutRedirect();
-    }
-  </script>
+    <div class="report-icons Teams" style="display: none;">
+      <a href="#"><img src="icons/afa.png" alt=""><span>Hi I'm a report</span></a>
+      <a href="#"><img src="icons/fires.png" alt=""><span>Hi I'm a report</span></a>
+      <!-- Add other prevention icons -->
+    </div>
+  </main>
+
+  <footer>
+    NPS v1.1.3.3 <br>
+    Copyright © Zanes Best 2025
+  </footer>
 </body>
 </html>
